  - Clock is handled internally in IKBD, host date/time is used
    only to initialize RTC at boot.  I.e. pausing emulation doesn't
    cause time skips when unpausing
- MFP changes :
  - Fixed priority errors when simultaneous interrupts happened
  - MFP's IRQ should be delayed by 4 cycles before reaching the CPU
  - MFP's IRQ signal was not correctly updated in some cases
- GEMDOS HD emulation changes :
  - Support Fforce() for GEMDOS HD emulated files and close at Pterm*()
    all internal handles to emulated files program had left open
  - Fix: cut file and dir names to 8+3 chars like all TOS versions do
  - Fix: GEMDOS HD emulation overwrote last 28 bytes of basepage space
    for the started process command line (with the program header)
  - Fix: Fwrite() content wasn't flushed to disk on each write, so later
    Fopen() + Fread()s calls on such files (if they were not closed
    in the meanwhile) could get data that was out of date.

Emulator:
- Fix: problems with run-time CPU type changing
- Much improved console redirection functionality and a separate --conout
  option for it (--bios-intercept doesn't anymore imply console redirection)
- Fixed a bug with the axes' mapping in the joystick's detection
- Display handling:
  - Fix: max resolution limit wasn't handled properly for ST mode.
  - Don't change TOS-calculated font size for VDI mode.
  - Setup NVRAM video mode based on VDI mode, when in VDI mode.
    This makes VDI mode work with EmuTOS also under Falcon emulation
    which is useful as EmuTOS doesn't support native VIDEL expanders
  - Limit VDI screen memory usage to 300kB, this allows upto 2048x1200
    monochrome and 1024x600/800x768 16-color VDI screens
- GEMDOS HD emulation:
  - Give warning if GEMDOS dir/file path exceeds 8+3 characters
    (as those won't work with real TOS)
  - New --gemdos-case option to specify whether new dir/filenames
    are forced to be created in upper (default) or lower case
- SDL GUI: