@@ -337,6 +337,11 @@ works on a real ST should work also in Hatari</b>.</p>
           informations to the serial port)</td>
     </tr>
     <tr>
+      <td>The Final Conflict</td>
+      <td>1.7</td>
+      <td>Buggy samples replay during the intro, requires Hatari &gt;= 1.7</td>
+    </tr>
+    <tr>
       <td>Toki</td>
       <td>before 1.0</td>
       <td>&nbsp;</td>
@@ -562,8 +567,9 @@ for border removal).</p>
     <tr>
       <td>MJJ Prod:
       <a href="http://pouet.net/prod.php?which=499">Anomaly</a></td>
-      <td class="minor">1.1</td>
-      <td>Main menu gets out of sync when playing digidrums</td>
+      <td>1.7</td>
+      <td>Requires Hatari &gt;= 1.7 to avoid glitches in the main menu
+	  when playing digidrums</td>
     </tr>
     <tr>
       <td>Next:
