@@ -27,6 +27,7 @@ Emulation:
   - Fixed priority errors when simultaneous interrupts happened
   - MFP's IRQ should be delayed by 4 cycles before reaching the CPU
   - MFP's IRQ signal was not correctly updated in some cases
+  - Handle the IACK cycles between CPU and MFP during an exception
 - GEMDOS HD emulation changes :
   - Support Fforce() for GEMDOS HD emulated files and close at Pterm*()
     all internal handles to emulated files program had left open
@@ -138,9 +139,11 @@ Fixed Games:
   Captain Blood (IKBD, fixed problem when setting the clock)
   Fokker and Downfall (ACIA/IKBD, had regressed in Hatari v1.6.x)
   Super Hang On and Super Monaco GP (MFP, flickering rasters)
+  The Final Conflict (MFP, locked during the sampled intro music)
   Zuul 100/101 Menu (MFP, flickering top border)
 
 Fixed demos :
+  Anomaly Demo Main Menu by MJJ Prod (MFP, flickering top/bottom borders)
   Audio Artistic Demo by Big Alec (MFP, bad sample speed at start)
   Decade Demo - Reset (MFP, flickering bottom border)
   High Fidelity Dreams by Aura (MFP, flickering left rasters)
